# TallerII-Tinder

./: .gitignore  .gitignore~  .travis.yml  Dockerfile  README.md  Taller_de_programacion_II_Instalar_paquetes.odt  Test.sh  Tinder.sh  Tinder.sh~  beforeinstall.sh  build.sh  build.sh~  executar.sh  request.py  requestChat.py  requestHappy.py  requestMatch.py  test.txt  testCoverage.sh
Documentacion/: Makefile  make.bat
Documentacion/source/: conf.py  conf.py~  entregas.rst  index.rst
Documentacion/source/androidClient/: ManualDeUsuario.rst
Documentacion/source/appServer/: Autentificacion.rst  Instalacion.rst  RestApi.rst  Tecnologias.rst
Documentacion/source/sharedServer/: ManualDeUsuario.rst
PythonTest/: requestChat.py  requestChat.py~  requestChat.txt  requestHappy.py  requestHappy.txt  requestMatch.py
Scripts/: Test.sh  beforeinstall.sh  build.sh  testCoverage.sh
TinderTaller/: .cproject  .gitignore  .project  .travis.yml  .travis.yml~  CMakeLists.txt  executar.sh  executar.sh~
TinderTaller/DB/: IDENTITY  LOG  OPTIONS-000005
TinderTaller/DBServer/: .gitignore
TinderTaller/config/: testConfig.Json  testConfig.Json~  tinderConfig.Json  tinderConfig.Json~  tinderConfigLocalHost.Json
TinderTaller/include/: Base64Utils.h  CandidateService.h  Client.h  ClientService.h  ClientServiceInterface.h  ClientServiceMock.h  ClientUtils.h  Configuration.h  DataBase.h  DataBase.h~  GcmClient.h  HTTPRequest.h  HTTPRequestParser.h  HandlerChat.h  HandlerInterest.h  HandlerInterface.h  HandlerMatch.h  HandlerServer.h  HandlerToken.h  HandlerUsers.h  Interest.h  JsonParser.h  JsonUtils.h  Server.h  SharedClient.h  SharedClientMock.h  Test.h  TimeUtils.h  TokenAuthentificator.h  TokenAuthentificatorInterface.h  TokenAuthentificatorMock.h  User.h  UserDao.h
TinderTaller/lib/: .gitignore
TinderTaller/lib/googletest/: .gitignore  CMakeCache.txt  Makefile  cmake_install.cmake
TinderTaller/lib/jsoncpp-master/: .gitignore
TinderTaller/src/: CMakeLists.txt  CMakeLists.txt~  CandidateService.cpp  Client.cpp  ClientService.cpp  Configuration.cpp  DataBase.cpp  GcmClient.cpp  HTTPRequestParser.cpp  HandlerChat.cpp  HandlerInterface.cpp  HandlerMatch.cpp  HandlerServer.cpp  HandlerServer.h  HandlerUsers.cpp  Interest.cpp  JsonParser.cpp  JsonUtils.cpp  Server.cpp  SharedClient.cpp  TimeUtils.cpp  TokenAuthentificator.cpp  User.cpp  UserDao.cpp  main.cpp  main.cpp~
TinderTaller/src/Handlers/: HandlerChat.cpp  HandlerInterest.cpp  HandlerInterface.cpp  HandlerMatch.cpp  HandlerToken.cpp  HandlerUsers.cpp
TinderTaller/src/Utils/: Base64Utils.cpp  HTTPRequestParser.cpp  JsonParser.cpp  TimeUtils.cpp  TokenAuthentificator.cpp
TinderTaller/tests/: CMakeLists.txt  CMakeLists.txt~  ClientServiceMock.cpp  Test.cpp  Test.cpp~  TestBase64Utils.cpp  TestConfiguration.cpp  TestDatabase.cpp  TestHTTPRequestParser.cpp  TestHandlerChat.cpp  TestHandlerInterest.cpp  TestHandlerMatch.cpp  TestHandlerServer.cpp  TestHandlerToken.cpp  TestHandlerUsers.cpp  TestInterest.cpp  TestJsonParser.cpp  TestTimeUtils.cpp  TestTokenAuthentificator.cpp  TestUser.cpp  TokenAuthentificatorMock.cpp  testConfig.Json
TinderTallerII/: .cproject  .project
TinderTallerII/lib/: default-logger.conf
TinderTallerII/src/: main.cpp
testCoverage/: index-sort-f.html  index-sort-l.html  index.html  output.info
testCoverage/src/: CandidateService.cpp.func-sort-c.html  CandidateService.cpp.func.html  CandidateService.cpp.gcov.html  ClientService.cpp.func-sort-c.html  ClientService.cpp.func.html  ClientService.cpp.gcov.html  DataBase.cpp.func-sort-c.html  DataBase.cpp.func.html  DataBase.cpp.gcov.html  HandlerServer.cpp.func-sort-c.html  HandlerServer.cpp.func.html  HandlerServer.cpp.gcov.html  Interest.cpp.func-sort-c.html  Interest.cpp.func.html  Interest.cpp.gcov.html  Server.cpp.func-sort-c.html  Server.cpp.func.html  Server.cpp.gcov.html  SharedClient.cpp.func-sort-c.html  SharedClient.cpp.func.html  SharedClient.cpp.gcov.html  User.cpp.func-sort-c.html  User.cpp.func.html  User.cpp.gcov.html  UserDao.cpp.func-sort-c.html  UserDao.cpp.func.html  UserDao.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
testCoverage/src/Handlers/: HandlerChat.cpp.func.html  (+20 more)
(+18 files in other folders)
